# neurodecode

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/architecture/: DESIGN.md
docs/papers/: LITERATURE.md
tests/: __init__.py  conftest.py
tests/unit/: test_sample.py
